--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -33,3 +33,31 @@
     </div>
   <% end %>
 </div>
+
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+<script type="text/javascript">
+  $(function(){
+    Stripe.setPublishableKey('<%= Rails.configuration.stripe[:publishable_key] %>');
+  });
+
+  $('#payment-form').submit(function(event) {
+    var form = $(this);
+    form.find('button').prop('disabled', true);
+    Stripe.createToken(form, stripeResponseHandler);
+    return false;
+  });
+
+
+  function stripeResponseHandler(status, response) {
+    var form = $('#payment-form');
+    if (response.error) {
+      form.find('.payment-errors').text(response.error.message);
+      form.find('button').prop('disabled', false);
+    } else {
+      var token = response.id;
+      form.append($('<input type="hidden" name="stripeToken">').val(token));
+      form.get(0).submit();
+    }
+  }
+</script>
