--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -22,3 +22,20 @@
 
 <%= link_to 'Edit', edit_sale_path(@sale) %> |
 <%= link_to 'Back', sales_path %>
+
+<p id="notice"><%= notice %></p>
+<table>
+  <tr>
+    <th>Key</th>
+    <th>Value</th>
+  </tr>
+  <% @sale.attributes.sort.each do |key, value| %>
+  <tr>
+    <td><%= key %></td>
+    <td><%= value %></td>
+  </tr>
+  <% end %>
+</table>
+
+<%= link_to 'Stripe', "https://manage.stripe.com/payments/#{@sale.stripe_id}" %>
+<%= link_to 'Back', sales_path %>
