--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -33,6 +33,13 @@
     </div>
   <% end %>
 </div>
+<div class='well'>
+  <div id="payment-errors" class="alert payment-alert" style="<%= sale.errors.any? ? '' : 'display: none;' %> margin-bottom: 0px;">
+    <% sale.errors.full_messages.each do |msg| %>
+      <span><%= msg %></span>
+    <% end %>
+  </div>
+</div>
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
