--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,45 +1,49 @@
-<div class="well" style="margin-left: 0px; position: relative; min-width: 650px; min-height: 180px; max-height: 180px">
-  <%= form_tag buy_path(permalink: permalink), :class => '', :id => 'payment-form' do %>
+<%= form_tag buy_path(permalink: permalink), :class => '', :id => 'payment-form' do %>
+  <div class="well payment-well" style="margin-bottom: 0px;">
     <div class="row">
+      <label class="control-label" for="email">Email Address <span class="label pull-right" style="margin-right: 8px">Secure <img src="<%= asset_path('lock.png') %>" style="height: 13px"></span></label>
+      <input autofocus="true" type="email" name="email" id="email" placeholder="you@example.com" class="payment-input"/>
     </div>
     <div class="row">
-      <div style="position: absolute; left: 20px">
-        <label class="control-label" for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="you@example.com" style="width: 25em"/>
-      </div>
-      <div style="position: absolute; left: 400px">
-        <label class="control-label" for="number">Card Number</label>
-        <input type="text" size="20" data-stripe="number" id="number" placeholder="**** **** **** ****" pattern="[\d ]*" style="width: 18em"/>
-      </div>
+      <label class="control-label" for="number">Card Number <span class="pull-right" style="margin-right: 8px"><img src="<%= asset_path('visa.png') %>" style="height: 15px;"><img src="<%= asset_path('mastercard.png') %>" style="height: 15px;"><img src="<%= asset_path('amex.png') %>" style="height: 15px;"><img src="<%= asset_path('discover.png') %>" style="height: 15px;"></span></label>
+      <input type="text" size="20" data-stripe="number" id="number" placeholder="1234 5678 9012 3456" pattern="[\d ]*" class="payment-input"/>
     </div>
-    <div class="row" style="margin-top: 65px">
-      <div style="position: absolute; left: 20px">
-        <label class="control-label" for="cvc">CVC</label>
-        <input type="text" style="width: 3em" size="3" data-stripe="cvc" id="cvc" placeholder="***" pattern="\d*"/>
-        <img id="card-image" src="/img/credit.png" style="height: 30px; padding-left: 10px; margin-top: -10px">
+    <div class="row">
+      <div style="float: left">
+        <label class="control-label" for="cvc">CV Code</label>
+        <input type="text" style="width: 3em" size="3" data-stripe="cvc" id="cvc" placeholder="123" pattern="\d*"/>
+        <img id="card-image" src="<%= asset_path('credit.png') %>" style="height: 30px; padding-left: 10px; margin-top: -10px">
       </div>
-      <div style="position: absolute; left: 150px">
-        <label class="control-label">Exp (MM/YYYY)</label>
+      <div style="float: right; margin-right: 8px">
+        <label class="control-label">Expiry Date</label>
         <input style="width: 2em" type="text" size="2" id="exp-month" data-stripe="exp-month" placeholder="MM" pattern="\d*"/>
         <span> / </span>
         <input style="width: 3em" type="text" size="4" id="exp-year" data-stripe="exp-year" placeholder="YYYY" pattern="\d*"/>
       </div>
     </div>
-    <div class="row" style="margin-top: 70px">
-      <div class="price" style="position: absolute; left: 20px;"><%= price %></div>
-      <div style="position: absolute; left: 400px">
-        <button type="submit" class="btn btn-primary btn-large">Buy Now</button>
+    <div class="row" style="margin-top: 20px">
+      <div class="price" style="margin-top: 20px; float: left"><%= price %></div>
+      <div style="float: right; margin-right: 8px;text-align:center">
+        <div class="btn btn-success btn-large" disabled="disabled" style="display: none; width: 70px; height: 20px;" id="spinner-button"><img src="<%= asset_path('green_spinner_2.gif') %>" style="height: 15px;"></div>
+        <button type="submit" class="btn btn-success btn-large" id="pay-button">Pay Now</button><br>
+        <small style="font-size:0.65em">90 Day Money-Back Guarantee</small>
       </div>
     </div>
-    <div class='row'>
+  </div>
+  <div class="payment-well" style="margin-top: 0px; margin-bottom: 0px;">
+    <div class="row">
+      <div id="powered-by-stripe" style="<%= sale.errors.any? ? 'display: none;' : '' %> margin-left: auto; margin-right: auto; text-align: center; margin-top: 15px;">
+        <img src="<%= asset_path('powered_by_stripe.png') %>">
+      </div>
       <div id="payment-errors" class="alert payment-alert" style="<%= sale.errors.any? ? '' : 'display: none;' %> margin-bottom: 0px;">
         <% sale.errors.full_messages.each do |msg| %>
           <span><%= msg %></span>
         <% end %>
       </div>
     </div>
-  <% end %>
-</div>
+  </div>
+<% end %>
+
 
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
