--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -171,17 +171,27 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 0px !important;
-  background: #4d129f;
+  background-color: #4d129f;
+  border: 0;
 }
 
 .payment-well .row {
   /* width: 280; */
-  margin-left: auto;
-  margin-right: auto;
+  width:90%;
+  margin:8px auto 8px auto;
 }
 
 .payment-well .payment-input {
   /* width: 280px; */
+  width: 100%;
+  height:33px;
+  border:1px solid #dfdfdf;
+  border-radius:5px;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size:16px;
+  color:#000000;
+  line-height:24px;
+  padding-left:5px;
 }
 
 .payment-quote {
