--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -171,7 +171,7 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 0px !important;
-  background-color: #4d129f;
+  background-color: #4d129f !important;
   border: 0;
 }
 
