--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -22,11 +22,11 @@
       </div>
     </div>
     <div class="row" style="margin-top: 20px">
-      <div class="price" style="margin-top: 20px; float: left"><%= price %></div>
+      <!-- <div class="price" style="margin-top: 20px; float: left"><%= price %></div> -->
       <div style="float: right; margin-right: 8px;text-align:center">
         <div class="btn btn-success btn-large" disabled="disabled" style="display: none; width: 70px; height: 20px;" id="spinner-button"><img src="<%= asset_path('green_spinner_2.gif') %>" style="height: 15px;"></div>
         <button type="submit" class="btn btn-success btn-large" id="pay-button">Pay Now</button><br>
-        <small style="font-size:0.65em">90 Day Money-Back Guarantee</small>
+        <!-- <small style="font-size:0.65em">90 Day Money-Back Guarantee</small> -->
       </div>
     </div>
   </div>
