move lock inside iframe

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,12 @@
   font-size: 1.5em;
   font-weight: bold;
   margin-top: 10px;
+  color: white;
+}
+
+.lock{
+	margin:5% auto;
+	display:block;
 }
 
 form {
