--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -38,6 +38,7 @@
       <div id="powered-by-stripe" style="<%= sale.errors.any? ? 'display: none;' : '' %> margin-left: auto; margin-right: auto; text-align: center;margin-bottom:1em;">
         <img src="<%= asset_path('powered_by_stripe.png') %>" width="119" height="26">
       </div>
+      <div class="formbtm"><img src="images/lock.png" alt="" class="lock"></div>
     </div>
   </div>
 <% end %>
