--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -229,3 +229,25 @@ body {
   margin-bottom: 0;
   padding-bottom: 0;
 }
+
+.frm-hding, .frm-hding2{
+	background:#ffffff url(/images/frm-hding-icon.png) 6px 5px no-repeat;
+	height:auto;
+	min-height:36px;
+	margin:0 auto;
+	width:100%;
+	position:relative;
+}
+.frm-hding2{
+	background:#ffffff url(/images/frm-hding-icon2.png) 6px 7px no-repeat;
+}
+.hding-txt{
+	font-weight:bold;
+	padding:1% 0 0 40px;
+	text-align:left;
+}
+.hding-arrow, .hding-arrow2{
+	position:absolute;
+	left:30px;
+	bottom:-14px;
+}
