--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag buy_path(permalink: permalink), :class => '', :id => 'payment-form' do %>
   <div class="frm-hding2">
     <p class="hding-txt">Enter Your Payment information</p>
-    <img src="images/hding-arrow.png" alt="" class="hding-arrow2">
+    <img src="/images/hding-arrow.png" alt="" class="hding-arrow2">
   </div>
   <div class="well payment-well">
     <div class="row">
