--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -19,7 +19,7 @@
       <input type="text" placeholder="State" name='region'>
     </div>
     <div class="frmElmnts2 clearfix">
-      <input type="text" placeholder="ZIP Code" name='zip_code'>
+      <input type="text" placeholder="ZIP Code" name='postal_code'>
     </div>
     <div class="frmElmnts2 clearfix">
       <input type="text" placeholder="Phone" name='phone'>
