uninitialized constant RAILS_ROOT

--- a/app/views/transactions/upsell.html.erb
+++ b/app/views/transactions/upsell.html.erb
@@ -1,2 +1,2 @@
-<%= render :file => "#{RAILS_ROOT}/public/upsell.html" %>
+<%= render :file => "#{Rails.root}/public/upsell.html" %>
 <%= render 'upsell_form', permalink: @product.permalink, sale: @sale, price: formatted_price(@product.price) %>
