--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -122,7 +122,7 @@
       }
       $.get("/status/" + guid, function(data) {
         if (data.status === "finished") {
-          window.top.location.href = "/stock-up-and-save/" + guid;
+          window.top.location.href = "/thank-you/" + guid;
         } else if (data.status === "errored") {
           showError(data.error)
         } else {
