fix path to images in receipt email

--- a/app/views/receipt_mailer/receipt.html.erb
+++ b/app/views/receipt_mailer/receipt.html.erb
@@ -24,10 +24,10 @@
 <div class="container">
 	<div class="row">
     	<div class="col-md-7 col-sm-7 col-xs-12">
-        <img src="/images/chk-logo.png" alt="" class="chk-logo">
+        <img src="https://transform.changethatup.com/images/chk-logo.png" alt="" class="chk-logo">
         </div>
         <div class="col-md-5 col-sm-5 col-xs-12">
-   	    	<img src="/images/confirmation-arrow.png" alt="" class="chk-rgt-arrow">
+   	    	<img src="https://transform.changethatup.com/images/confirmation-arrow.png" alt="" class="chk-rgt-arrow">
         </div>
     </div>
 </div>
