--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -33,7 +33,7 @@
     <div class="well payment-well">
       <div class="row">
         <label class="control-label" for="email">Email Address <span class="label pull-right" style="margin-right: 8px">Secure <img src="<%= asset_path('lock.png') %>" style="height: 13px"></span></label>
-        <input autofocus="true" type="email" name="email" id="email" placeholder="you@example.com" class="payment-input"/>
+        <input type="email" name="email" id="email" placeholder="you@example.com" class="payment-input"/>
       </div>
       <div class="row">
         <label class="control-label" for="number">Card Number <span class="pull-right" style="margin-right: 8px"><img src="<%= asset_path('visa.png') %>" style="height: 15px;"><img src="<%= asset_path('mastercard.png') %>" style="height: 15px;"><img src="<%= asset_path('amex.png') %>" style="height: 15px;"><img src="<%= asset_path('discover.png') %>" style="height: 15px;"></span></label>
