autofocus the correct field

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag buy_path(permalink: permalink), :class => '', :id => 'payment-form' do %>
   <div class="formtop">
     <div class="frmElmnts2 clearfix" style="margin-top:25px;">
-      <input type="text" placeholder="First Name" name='fname'>
+      <input autofocus='true' type="text" placeholder="First Name" name='fname'>
     </div>
     <div class="frmElmnts2 clearfix">
       <input type="text" placeholder="Last Name" name='lname'>
